rhai/codegen/ui_tests/rhai_fn_getter_signature.stderr
error: property getter requires exactly 1 parameter
  --> ui_tests/rhai_fn_getter_signature.rs:13:20
   |
13 |     pub fn test_fn(input: Point, value: bool) -> bool {
   |                    ^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> ui_tests/rhai_fn_getter_signature.rs:23:8
   |
23 |     if test_module::test_fn(n, true) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
